--- a/less8/package.json
+++ b/less8/package.json
@@ -20,13 +20,15 @@
     "@types/react-router-dom": "^5.3.3",
     "ahooks": "^3.8.1",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "history": "^5.3.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
