--- a/less8/package.json
+++ b/less8/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
