--- a/less8/package.json
+++ b/less8/package.json
@@ -21,6 +21,7 @@
     "ahooks": "^3.8.1",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "formik": "^2.4.6",
     "history": "^5.3.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -32,7 +33,8 @@
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
