--- a/less12/package.json
+++ b/less12/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.9.0",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
@@ -14,6 +14,8 @@
     "dev": "nodemon src/index.ts"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "reflect-metadata": "^0.2.2",
+    "routing-controllers": "^0.10.4"
   }
 }
