--- a/less12/package.json
+++ b/less12/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
-    "routing-controllers": "^0.10.4"
+    "routing-controllers": "^0.10.4",
+    "typeorm": "^0.3.20"
   }
 }
